SAAS-781: Show alerts on mobile view. Hide column headers for alert list. Fix alert formatting after pagination. Display date as inline in mobile view in alert list.

--- a/assets/sass/blocks/details.scss
+++ b/assets/sass/blocks/details.scss
@@ -656,6 +656,13 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+
+    @include bp(xs) {
+        display: inline-block;
+    } // xs
+    @include bp(sm) {
+        display: inline-block;
+    } // sm
   }
 
   span.cell-default-span {
